# tinymath

./: CMakeLists.txt  README.md
src/: tinymath.c  tinymath.h
